# operator

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  install.sh
.claude/commands/: fixtures.md  operator-debug.md  trace.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
Formula/: operator.rb
KokoroTTS/: Package.resolved  Package.swift  REFERENCE_COMPARISON.md
Operator/: .swift-format  .swiftlint.yml  2026-03-18T13-12-04-05-00.txt  Info.plist  Package.resolved  Package.swift  generate-tones.py
docs/: mpsgraph-decoder-notes.md  stt-architecture.md  transcription-engine-design.md  transcription-engine-interfaces.md  whisperkit-reference.md
docs/hypotheses/: agent-to-agent-messaging.md  coreml-compression-research.md  coreml-quantization-results.md  coreml-qwen35-status.md  report.md  report.py
mcp-server/: .prettierrc.json  README.md  eslint.config.js  package-lock.json  package.json
mcp-server/src/: index.test.ts  index.ts
plans/: local-routing-engine.md  parakeet-contextual-biasing.md  post-transcription-correction.md  speech-swift-integration.md
research/: 2026-03-06-iterm-session-targeting.md  speak-prompt-best-practices.md
research/correction-lora/: generate-training-data.py  test.sh  train.sh
rust/qwen-tokenizer/: Cargo.toml  build.rs
rust/qwen-tokenizer/src/: lib.rs  qwen_tokenizer.udl
scripts/: build-mlx-metallib.sh  build-tokenizer.sh  capture-fixture.sh  cleanup-preview.py  inject-speed-compiled.py  inject-speed.py  pre-commit  restart.sh  run-benchmarks.sh  verify-all.sh  watch-quality.sh
scripts/pipeline/: README.md  (+12 more)
(+304 files in other folders)
