[package]
name = "qwen-tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "qwen_tokenizer"

[dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
thiserror = "2"
uniffi = { version = "0.29", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
